# telepix

./: .gitignore  README.md  histogram.py  index.html  requirements.txt
CreatDataset/: .gitignore  README.md  RPC_170.py  pyproject.toml  requirements.txt  satellite_sfm_crop2048to256.py
CreatDataset/preprocess/: approximate_rpc_locally.py  factorize_projection_matrix.py  parse_tif_image.py  preprocess_image_set.py
CreatDataset/preprocess_sfm/: install_colmapforvissat.sh
config/: main.yaml
config/dataset/: re10k.yaml
config/dataset/view_sampler/: bounded.yaml
config/experiment/: re10k.yaml
config/loss/: feature.yaml  lpips.yaml  relheight.yaml
config/model/encoder/: costvolume.yaml
scripts/: build_3dgs_ply.py  compare_across_runs.py  compose_21crops.py  compose_all5.py  compose_height.py  compose_in_target_view.py  compose_lotte_wide.py  convert_planet.py  convert_planet_histmatch_tif.py  fixup_demo.py  fixup_planet.py  histmatch_crops_tensor.py  keep_common_3views.py  keep_common_crops.py  make_continuous_mosaic.py  make_mosaic.py  polish_3dgs_ply.py  render_3d.py  render_3d_better.py  render_3d_open3d.py  run_clean_sweep.py  run_clean_sweep_histmatch.py  sweep_third_view.py
src/dataset/: __init__.py  data_module.py  dataset_re10k.py
src/evaluation/: metrics.py
src/geometry/: projection.py
src/loss/: __init__.py  loss_feature.py  loss_lpips.py  loss_mse.py  loss_relheight.py
src/model/: model_wrapper.py  ply_export.py  types.py
src/model/decoder/: cuda_splatting.py  decoder.py  decoder_splatting_cuda.py
(+5 files in other folders)
